# dvpp

./: .gitignore  CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  init.sh  run.sh  show.py
inc/: decode.h  ffmpeg.h  resource.h  utils.h
src/: CMakeLists.txt  decode.cpp  ffmpeg.cpp  main.cpp  resource.cpp  utils.cpp
